
  * Fixed #1345 - bug on incoming and outgoing sip connections
  * Refs #1332 - experimental gtalk phoneline provider support
  * Refs #1328 - Don't clear peers from realtime cache, makes incoming
    calls not work after some minutes
  * Fixed bug preventing IAX2 provider registration
  * Fixed some IAX provider trunk bug's
  * Fixed a bug if SIP provider username <> phonenumber

 -- Serge Wagener <serge@linuxmce.org>  Sun, 08 Jan 2012 20:56:40 +0100

lmce-asterisk (0+0.3.1-1) unstable; urgency=low

  * Added support for CISCO mobile iOS app softphone (see http://wiki.linuxmce.org/index.php/Cisco_Mobile)
  * Corrected sos sound files path
  * Remove sox warning messags
  * Some modification on SIP provider registering to reduce incoming
    call problems
  * Setting default SIP language to en, targeting multi language once
    all works

 -- Serge Wagener <serge@linuxmce.org>  Sat, 19 Nov 2011 18:54:38 +0100

lmce-asterisk (0+0.3.0-4) unstable; urgency=low

  * Add dependency to asterisk-voicemail
  * Some table structure modifications

 -- Serge Wagener <serge@linuxmce.org>  Tue, 14 Nov 2011 20:00:00 +0200

lmce-asterisk (0+0.3.0-3) unstable; urgency=low

  * Fixed a bug in db creation sql file

 -- Serge Wagener <serge@linuxmce.org>  Tue, 8 Nov 2011 07:15:00 +0200

lmce-asterisk (0+0.3.0-2) unstable; urgency=low

  * Fixed a lot of small bugs

 -- Serge Wagener <serge@linuxmce.org>  Tue, 1 Nov 2011 08:00:00 +0200

lmce-asterisk (0+0.3.0-1) unstable; urgency=low

  * Making package asterisk-1.8 compatible.

 -- Serge Wagener <serge@linuxmce.org>  Tue, 25 Oct 2011 14:00:00 +0200

lmce-asterisk (0+0.2.0-8) unstable; urgency=low

  * Making 'hints' work using conf files. Not yet supported in realtime by asterisk.

 -- Serge Wagener <serge@linuxmce.org>  Sun, 23 Oct 2011 19:30:00 +0200

lmce-asterisk (0+0.2.0-7) unstable; urgency=low

  * Modifying trunk SIP entry for incoming calls to work

 -- Serge Wagener <serge@linuxmce.org>  Sat, 22 Oct 2011 14:30:00 +0200
