@@ -7,8 +7,9 @@ lmce-asterisk (0+0.3.1-2) unstable; urgency=low
   * Fixed bug preventing IAX2 provider registration
   * Fixed some IAX provider trunk bug's
   * Fixed a bug if SIP provider username <> phonenumber
+  * Fixed a bug for incoming calls when username <> phonenumber
 
- -- Serge Wagener <serge@linuxmce.org>  Sun, 08 Jan 2012 20:56:40 +0100
+ -- Serge Wagener <serge@linuxmce.org>  Sun, 08 Jan 2012 21:10:29 +0100
 
 lmce-asterisk (0+0.3.1-1) unstable; urgency=low
 
